Update some words and some images.

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -224,11 +224,8 @@
     <div id="key" class="step" data-x="2800" data-y="1000">
         <p><b style="font-size: 40px;">我们一直致力于分享价值、创造价值，提升个人，倡导和谐，给用户带来无尽的舒适体验，同时提升公司软实力。
             <br/>但，这些都基于:</b></p>
-        <ul>
-            <li><span class="width160">和谐</span><span>我们没有完美的个人，但是我们有完美的团队</span></li>
-            <li><span class="width160">效率</span><span>技术主导，高效的开发方式</span></li>
-            <li><span class="width160">合作</span><span>人少，但是共同承担任务</span></li>
-        </ul>
+        <br/>
+        <p><b><span style="font-size: 1.5em;display: inline-block;border: 2px solid black;border-radius: 50%;padding: 5px 20px 10px;">家</span>一样的团队，<span style="font-size: 1.5em;display: inline-block;position: relative;z-index: 1;width: 1.5em;"><span style="display: inline-block;position: relative;">神<span style="display: inline-block;position: absolute;width: 1.5em;overflow: hidden;height: 1.5em;left: -12px;top: -92px;"><img src="resource/img/000.gif" style="width: 98%;margin-bottom: -81px;"></span></span></span>一样的队友！</b></p>
     </div>
 
     <div id="thanks" class="step" data-x="4400" data-y="2000">
