Update the OneNET 3.0 standards.

--- a/_layouts/standards.html
+++ b/_layouts/standards.html
@@ -8,7 +8,8 @@
     </title>
     <link href="resource/css/common.css" rel="stylesheet">
     <link href="resource/css/module.css" rel="stylesheet">
-    <!--<link href="resource/fontello.css" rel="stylesheet">-->
+    <link href="resource/css/iselect.css" rel="stylesheet">
+    <link href="resource/css/ui-fontello.css" rel="stylesheet">
     {{ page.extcss }}
     <script>
         var IOT = {};
@@ -19,12 +20,15 @@
 <div class="header">
 </div>
 
+<script src="resource/js/jquery-1.11.1.min.js"></script>
+<script src="resource/js/jquery-iselect.js"></script>
+<script src="resource/js/jquery.slimscroll.min.js"></script>
+<script src="resource/js/docs.js"></script>
+<script src="resource/js/prettify.js"></script>
 <div id="main" class="grid doc-detail">
     {{ content }}
 </div>
-<script src="resource/js/jquery-1.11.1.min.js"></script>
-<script src="resource/js/docs.js"></script>
-<script src="resource/js/prettify.js"></script>
+
 
 <script>
     (function(){
