--- a/_standards/resource/css/module.css
+++ b/_standards/resource/css/module.css
@@ -81,3 +81,11 @@
     top: 10%;
     color: #fff;
 }
+
+/* Selector */
+#selector-sex {
+    width: 200px;
+}
+#selector-province {
+    width: 200px;
+}
