Update the OneNET 3.0 standards regarding button.

--- a/_layouts/standards.html
+++ b/_layouts/standards.html
@@ -10,6 +10,8 @@
     <link href="resource/css/module.css" rel="stylesheet">
     <link href="resource/css/iselect.css" rel="stylesheet">
     <link href="resource/css/ui-fontello.css" rel="stylesheet">
+    <link href="resource/css/ui-button.css" rel="stylesheet">
+    <link href="resource/css/tips.css" rel="stylesheet">
     {{ page.extcss }}
     <script>
         var IOT = {};
@@ -24,6 +26,7 @@
 <script src="resource/js/jquery-iselect.js"></script>
 <script src="resource/js/jquery.slimscroll.min.js"></script>
 <script src="resource/js/docs.js"></script>
+<script src="resource/js/tips.js"></script>
 <script src="resource/js/prettify.js"></script>
 <div id="main" class="grid doc-detail">
     {{ content }}
