Update the OneNET 3.0 standards regarding check, tooltip, tips.

--- a/_layouts/standards.html
+++ b/_layouts/standards.html
@@ -11,6 +11,7 @@
     <link href="resource/css/iselect.css" rel="stylesheet">
     <link href="resource/css/ui-fontello.css" rel="stylesheet">
     <link href="resource/css/ui-button.css" rel="stylesheet">
+    <link href="resource/css/square/green.css" rel="stylesheet">
     <link href="resource/css/tips.css" rel="stylesheet">
     {{ page.extcss }}
     <script>
@@ -26,8 +27,10 @@
 <script src="resource/js/jquery-iselect.js"></script>
 <script src="resource/js/jquery.slimscroll.min.js"></script>
 <script src="resource/js/docs.js"></script>
+<script src="resource/js/icheck.min.js"></script>
 <script src="resource/js/tips.js"></script>
 <script src="resource/js/prettify.js"></script>
+<script src="resource/js/jquery-tooltip.js"></script>
 <div id="main" class="grid doc-detail">
     {{ content }}
 </div>
@@ -38,6 +41,7 @@
         $(function() {
             $('pre').addClass('prettyprint');
             prettyPrint();
+            $('body').tooltip().init();
         });
     })();
 </script>
