Update the OneNET 3.0 standards regarding pagination.

--- a/_layouts/standards.html
+++ b/_layouts/standards.html
@@ -13,6 +13,7 @@
     <link href="resource/css/ui-button.css" rel="stylesheet">
     <link href="resource/css/square/green.css" rel="stylesheet">
     <link href="resource/css/tips.css" rel="stylesheet">
+    <link href="resource/css/pager.css" rel="stylesheet">
     {{ page.extcss }}
     <script>
         var IOT = {};
@@ -31,6 +32,7 @@
 <script src="resource/js/tips.js"></script>
 <script src="resource/js/prettify.js"></script>
 <script src="resource/js/jquery-tooltip.js"></script>
+<script src="resource/js/pager.js"></script>
 <div id="main" class="grid doc-detail">
     {{ content }}
 </div>
