--- a/_standards/resource/css/ui-parsley.css
+++ b/_standards/resource/css/ui-parsley.css
@@ -17,9 +17,9 @@
     margin-left: 10px;
     top: 4px;
     position: relative;
-    -webkit-box-shadow: 0 0 10px red;
-    -moz-box-shadow: 0 0 10px red;
-    box-shadow: 0 0 10px red;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
 }
 .parsley-errors-list li span {
     display: inline-block;
