--- a/_standards/resource/css/ui-parsley.css
+++ b/_standards/resource/css/ui-parsley.css
@@ -3,19 +3,19 @@
     height: 0px;
     border-width: 6px;
     border-style: solid;
-    border-color: transparent #ff4931 transparent transparent;
+    border-color: transparent transparent #ff4931 transparent;
     content: '';
     position: absolute;
-    top: 10px;
-    left: -12px;
+    top: -12px;
+    left: 10px;
 }
 .parsley-errors-list li {
     display: inline-block;
     padding: 2px 10px;
     color: #fff;
     background-color: #ff4830;
-    margin-left: 10px;
-    top: 4px;
+    margin-left: 16px;
+    top: -5px;
     position: relative;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
