--- a/_layouts/portal04.html
+++ b/_layouts/portal04.html
@@ -7,13 +7,14 @@
         {{ page.title }}
     </title>
     <link href="resource/css/global.css" rel="stylesheet">
+    <link rel="stylesheet" href="resource/css/font/demo.css">
     <link href="resource/css/font/iconfont.css" rel="stylesheet">
     {{ page.extcss }}
 </head>
 <body>
 <div class="header" style="background-color: #000000;">
     <div class="header-body">
-        <a href="#" class="header-logo"></a>
+        <span class="protal-title">4.0规范</span>
         <div class="header-menu">
             <ul class="header-menu-ul">
                 <li class="header-menu-ul-li type-2">
@@ -60,7 +61,7 @@
 <div id="main" class="grid doc-detail">
     {{ content }}
 </div>
-<script type="text/javascript" src="resource/js/pager.js"></script>
+
 <script src="resource/js/jquery-1.11.1.min.js"></script>
 <script src="resource/js/global.js"></script>
 <script src="resource/js/prettify.js"></script>
