--- a/_layouts/portal04.html
+++ b/_layouts/portal04.html
@@ -44,7 +44,7 @@
                 </li>
                 <li class="header-menu-ul-li">
                     <a href="table.html" class="header-menu-a">
-                        <span>Table</span>
+                        <span>Tab</span>
                     </a>
                 </li>
                 <li class="header-menu-ul-li">
